@startuml

left to right direction

skinparam DefaultTextAlignment center
skinparam ClassAttributeIconSize 0
skinparam PackageStyle rectangle

package "Client Application" as ClientApplication {}

class Originator {
    - state: type
    + state(type): state
    + memento(type): Memento
}

class CareTaker {
    - originator: Originator
    - mementos: Memento[]
    + create(): void
    + restore(number): void
}

class Memento {
    + state
}

ClientApplication o--> Originator
ClientApplication o--> CareTaker

CareTaker "  N" o-down-> Memento

Originator -right-o CareTaker

